crates/toml_edit/tests/snapshots/invalid/ext/float/trailing-point-exp.stderr
TOML parse error at line 1, column 7
  |
1 | a = 0.e
  |       ^
invalid floating-point number
expected digit
